# nrs_path

./: CMakeLists.txt  README.md  nrs_ver2.launch  package.xml  readme.md
config/: cad_scan_rviz_config.rviz  joint_limits.yaml  params.yaml  rviz_config.rviz  ur10.srdf
data/: 06_16_continuous_EKF.txt  06_16_continuous_original.txt  Merged.txt  Mesh_center.txt  Ori_path.txt  Ori_path_projected.txt  Ori_path_transformed.txt  continuous_teaching_waypoints.txt  control_waypoints.txt  final_waypoints.txt  final_waypoints_RPY.txt  geodesic_waypoints.txt  interpolated_continuous_waypoints.txt  interpolated_joint_states.txt  interpolated_waypoints.txt  kalman_filter.py  normal_plot.py  projected_final_waypoints.txt  q0q1q2q3.txt  selected_waypoints.txt  smoothing_interpolated_waypoints.txt  tcp_states.txt  test.txt  test_final_waypoints.txt  transformed_control_waypoints.txt  transformed_final_waypoints.txt  transformed_visual_waypoints.txt  visual_final_waypoints.txt  visual_waypoints.txt  waypoints.txt  waypoints_and_controlpoints.txt  waypoints_with_RPY.txt  xyzrpy_plot.py
data/0623/: 0623_continuous_0cm_1.txt  0623_continuous_0cm_2.txt  0623_continuous_0cm_3.txt  0623_continuous_0cm_4.txt  0623_continuous_0cm_5.txt  0623_continuous_10cm_1.txt  0623_continuous_10cm_2.txt  0623_continuous_10cm_3.txt  0623_continuous_10cm_4.txt  0623_continuous_10cm_5.txt  0623_discrete_0cm_1.txt  0623_discrete_0cm_2.txt  0623_discrete_10cm_1.txt  0623_discrete_10cm_2.txt
data/0624/: 0624_continuous_10cm_filter_o_1.txt  0624_continuous_10cm_filter_o_2.txt  0624_continuous_10cm_filter_o_3.txt  0624_continuous_10cm_filter_o_4.txt  0624_continuous_10cm_filter_o_5.txt  0624_continuous_10cm_filter_x_1.txt  0624_continuous_10cm_filter_x_2.txt  0624_continuous_10cm_filter_x_3.txt  0624_continuous_10cm_filter_x_4.txt  0624_continuous_10cm_filter_x_5.txt  0624_discrete_0cm_1..txt  0624_discrete_0cm_2.txt
data/0704/: 0704_continuous_0cm_filter_o_1.txt  0704_continuous_0cm_filter_o_3.txt  0704_continuous_0cm_filter_o_5.txt  0704_continuous_10cm_filter_o_1.txt  0704_continuous_10cm_filter_o_2.txt  0704_continuous_10cm_filter_o_3.txt  0704_continuous_10cm_filter_o_4.txt  0704_continuous_10cm_filter_o_5.txt  0704_discrete_0cm_filter_o.txt  0704_discrete_10cm_filter_o.txt
data/0715/: 0715_after_filter.txt  0715_before_filter.txt  0715_continuous_0cm_filterx.txt  0715_continuous_10cm_filterx.txt
data/0806/: 0806_continuous_0cm_filtero.txt  0806_continuous_0cm_filterx.txt  0806_continuous_10cm_filtero.txt  0806_continuous_10cm_filterx.txt
data/0807/: 0807_continuous_0cm_filtero_1.txt  0807_continuous_0cm_filterx_1.txt  0807_continuous_10cm_filtero_1.txt  0807_continuous_10cm_filtero_2.txt  0807_continuous_10cm_filterx_1.txt  0807_continuous_10cm_filterx_2.txt
data/0809/: servoing.txt  topview.txt
data/0814/: 0814_topview_continuous_0cm.txt  0814_topview_continuous_10cm.txt  0814_topview_discrete_0cm.txt  0814_topview_discrete_10cm.txt
data/0819/: Eunseop_DT.txt  Eunseop_TP.txt  Hyeonju_DT.txt  Hyeonju_TP.txt  Yeongbin_DT.txt  Yeongbin_TP.txt  cheolhyun.txt  taehyun_TP.txt
data/0827/: 0827_fingerpaddingfilter.txt
dependencies/: cgal_related.cpp  cgal_related.h  path.cpp  path.h  visualization.cpp  visualization.h
include/: nrs_callback.h  nrs_geodesic.h  nrs_interpolation.h  nrs_io.h
launch/: cad_path_generation.launch  cad_scan_align.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  nrs_path_planning.launch  nrs_vision_rviz.launch  ompl_planning_pipeline.launch.xml  path_planning.launch  path_transformer.launch  plane_detection.launch  planning_context.launch  planning_pipeline.launch.xml  registration.launch  robot_state_publisher.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  system.launch  trajectory_execution.launch.xml  ur10_moveit_controller_manager.launch.xml  warehouse.launch  xacro_tf.launch  yonoo.launch
launch/moveit/: move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  planning_context.launch  run_benchmark_ompl.launch
mesh/: curved_surface.stl  fenda.stl  fenda_wrap.stl  half_sphere.stl  lid_wrap.stl  reshaped_testbed.stl  reshaped_white_part.stl  reshaped_white_part_2.stl  sample_wrap.stl  testbed.stl  ur10_tooltip.stl  white_part.stl  white_part_2.stl  workpiece.stl
msg/: Waypoint.msg
pcd/: Plane_detected_testbed.ply  Plane_detected_testbed_stl.ply  Plane_detected_white_part.ply  Plane_detected_white_part_2.ply  Plane_detected_white_part_2_stl.ply  Plane_detected_white_part_stl.ply  testbed.pcd  testbed.xyz  testbed_stl.pcd  testbed_stl.xyz  white_part.pcd  white_part.xyz  white_part_2.pcd  white_part_2.xyz  white_part_2_stl.pcd  white_part_2_stl.xyz  white_part_stl.pcd  white_part_stl.xyz
rviz/: rviz_config.rviz
scripts/: kill.py  nrs_node_interpolate_continuous_waypoints.py  registration.py  stl2pcd.py  wait.py  xacro_tf.py
src/: VR_Path_Planning.cpp  geodesic_hermite_path_generator.cpp  hand_teaching.cpp  keyboard_listener.cpp  moveit_planner.cpp  nrs_callback.cpp  nrs_geodesic.cpp  nrs_interpolation.cpp  nrs_io.cpp  nrs_math.cpp  nrs_node_path_generation.cpp  path_generator.cpp  path_projection.cpp  path_publisher.cpp  path_transformer.cpp  path_visualizer.cpp  plane_detection.cpp  point_publisher.cpp  point_visualizer.cpp  reshape_stl.cpp  test_path_visualizer.cpp  testcode.cpp  visualize_mesh.cpp  waypoints_interpolator.cpp
urdf/: cad_model.xacro  environment.xacro  scan_model.xacro  testbed.urdf.xacro  testbed.xacro  ur.xacro  ur10.xacro  ur10e.xacro  workpiece.xacro
urdf/inc/: ur10_macro.xacro  ur10e_macro.xacro  ur_common.xacro  ur_macro.xacro
waypoints/: waypoints.txt
